fix spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -174,3 +174,7 @@
 .section {
   flex-wrap: wrap;
 }
+
+.btn-link {
+  margin-top: auto;
+}
